--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,12 @@
 @import url(./home/introducao.css);
 @import url(./home/tecnologias.css);
 @import url(./home/parceiros.css);
+@import url(./home/depoimento.css);
 
 /* Biciletas */
 @import url(./bicicletas/bicicletas-lista.css);
+
+/*Seguros*/
+@import url(./seguros/seguros.css);
 
 
