--- a/utilidades/componentes.css
+++ b/utilidades/componentes.css
@@ -16,11 +16,23 @@
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     text-transform: uppercase;
     color: var(--cor-p5);
-    font: 500 1.125rem/1.35 "Poppins", sans-serif;
+    font: 600 1.125rem/1.35 "Poppins", sans-serif;
+    max-width: max-content;
 }
+
 .botao:hover {
     background: linear-gradient(#ffb60d , #e59317);
 }
+
+.botao.secundario {
+    background: var(--cor-10);
+    color: var(--cor-2);
+  }
+  
+  .botao.secundario:hover {
+    background: var(--cor-9);
+  }
+
 
 @media (max-width:600px) {
     .botao {
@@ -51,3 +63,13 @@
   .link:hover {
     color: var(--cor-0);
   }
+
+  @media (max-width: 800px) {
+    .seguros-bg {
+      background: var(--cor-11);
+    }
+    .seguros {
+      grid-template-columns: 1fr;
+    }
+  }
+  
